objects/wkitsm__RequestMenuQuestion__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__DefaultValue__c</fullName>
        <description>The stored default value for a question. Stored as text, but can represent most any data type.</description>
        <inlineHelpText>The stored default value for a question. Stored as text, but can represent most any data type.</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the question is active. This will determine whether or not the question is rendered on forms.</description>
        <inlineHelpText>When selected, the question is active and is rendered on forms.</inlineHelpText>
        <label>Display question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__LookupFilterField__c</fullName>
        <description>Field name used for lookup filter</description>
        <label>Lookup Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__LookupFilterValue__c</fullName>
        <description>The value used for the lookup filter</description>
        <label>Lookup Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__LookupRelatesToSObject__c</fullName>
        <description>The name of the sobject to relate to</description>
        <label>Lookup Relates To SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__LookupSelectedRecordValue__c</fullName>
        <description>The name/label of the selected record</description>
        <label>Lookup Selected Record Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__QuestionLabel__c</fullName>
        <description>The label for the question.</description>
        <inlineHelpText>The display label for the question.</inlineHelpText>
        <label>Question Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__RequestMenuItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The request menu item to map to this question.</description>
        <inlineHelpText>The request menu item to map to this question.</inlineHelpText>
        <label>Request Menu Item</label>
        <referenceTo>wkitsm__RequestMenuItem__c</referenceTo>
        <relationshipLabel>Request Menu Item Questions</relationshipLabel>
        <relationshipName>RequestMenuItemQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__RichTextValue__c</fullName>
        <description>The rich text value associated with the question.</description>
        <inlineHelpText>The rich text value associated with the question.</inlineHelpText>
        <label>Rich Text Value</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Request Menu Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Menu Questions</pluralLabel>
    <recordTypes>
        <fullName>wkitsm__Boolean</fullName>
        <active>true</active>
        <label>Boolean</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Date</fullName>
        <active>true</active>
        <label>Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__DateTime</fullName>
        <active>true</active>
        <label>Date Time</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__FreeText</fullName>
        <active>true</active>
        <label>Free Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Lookup</fullName>
        <active>true</active>
        <label>Lookup</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__MultiSelectPicklist</fullName>
        <active>true</active>
        <label>Multi Select Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Number</fullName>
        <active>true</active>
        <label>Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__Picklist</fullName>
        <active>true</active>
        <label>Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__RichText</fullName>
        <active>true</active>
        <label>Rich Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>wkitsm__ShortText</fullName>
        <active>true</active>
        <label>Short Text</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>